[package]
name = "wise"
version = "0.1.0"
authors = ["MizukiSonoko <sonoko@mizuki.io>"]
edition = "2018"
license = "MIT"
description = "Whois for ENS"
readme = "README.md"

keywords = ["ens","ethereum"]
categories = ["command-line-interface"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
web3 = "0.16.0"
tokio = { version = "1.7.0", features = ["full"] }
tiny-keccak = { version = "2.0", features = ["sha3"] }