[package]
name = "wise"
version = "1.0.3-alpha.0"
authors = ["MizukiSonoko <sonoko@mizuki.io>"]
edition = "2018"
license = "MIT"
description = "Whois for ENS"
readme = "README.md"

keywords = ["ens","ethereum"]
categories = ["command-line-interface"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
web3 = "0.16.0"
tokio = { version = "1.7.0", features = ["full"] }
tiny-keccak = { version = "2.0", features = ["sha3"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bs58 = "0.2.0"
hex = "0.4.3"
thiserror = "1.0"
anyhow = "1.0"
qr2term = "0.2.2"
